fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+.contentContainer {
+  margin-top: 100px;
+}
+
 .App-footer {  
   position: relative;
   top:100px;
