--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,5 +1,6 @@
 .header {
   position: fixed;
+  top: 0;
   height: 100px;
   width: 100%;
   display: flex;
